results/SVCOMP/conversational/log-ExSymExeF2L-2024_03_12_15_42_09.txt
class Main {

  //@ requires x >= 0.0f && x <= Long.MAX_VALUE / 2;
  //@ ensures \result <==> x > 0 || x <= 0;
  public static boolean f(float x) {
    if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0f;
  //@ ensures \result <==> res > 0 || res <= 0;
  public boolean test(float x) {

    long res = (long) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:14: error: cannot find symbol
  //@ ensures \result <==> res > 0 || res <= 0;
                           ^
  symbol:   variable res
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeF2L.java:14: error: cannot find symbol
  //@ ensures \result <==> res > 0 || res <= 0;
                                      ^
  symbol:   variable res
  location: class Main
2 errors

class Main {

  //@ requires x >= 0.0f && x <= Long.MAX_VALUE / 2;
  //@ ensures \result <==> x > 0 || x <= 0;
  public static boolean f(float x) {
    if (x >= 0.0f && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0f;
  //@ ensures \result <==> x + 1 > 0 || x + 1 <= 0;
  public boolean test(float x) {

    long res = (long) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}

